# SDM_progetto

./: .gitignore  CUDA_SSD_COLORFILTER_FINALE.cu  CUDA_SSD_COLORFILTER_VIDEO_V1.cu  README.md  main.cpp  main_video_V1.cu  main_video_V2.cu  main_video_finale.cu
SDM_progetto_scalar_V1/: CMakeLists.txt  main.cpp
cuda/: Dockerfile.podman  funzionanteMSB.cu  main  main.cu  main1.cu  main2.cu  main3.cu  tMatchSeq.h  temp_templateMatchingSSD  template_matching_ssd  test  test1.cpp
cuda/NAIVE/: mainNaive.cu
cuda/NAIVE_FFT/: mainNaive.cu  tMatchSeq.h
cuda/PREFIX_SUM/: mainPS.cu  tMatchSeq.h
naive/: CMakeLists.txt  main.cpp
openmp_simd/: CMakeLists.txt  main.cpp  mainSIMD_1.cpp  main_simd32.cpp  main_simd64.cpp  mainsimf32.cpp
prefixSum report/: main (1).cu  main.cu  report_prefixSum.ncu-rep
prove video/: main_video_V3.cu  main_video_opt.cu  tMatchSeq.h
report/Color_Filter/: main  main.cu  report_colorFilter.ncu-rep
report/NAIVE_FFT/: NAIVE_FFT_report.csv  main.cu
report/prefixSum/: main.cu  report_prefixSum (1).ncu-rep
report_naive_finale/: main_naive.cu  report_naive.csv  tMatchSeq.h
report_optimized/: main_optimized.cu  report_optimized.csv
